# fast-approximate-root-ccd

./: .gitignore  CMakeLists.txt  README.md  ccd.ipynb
.github/workflows/: continuous.yml
cmake/far_ccd/: far_ccd_filter_flags.cmake  far_ccd_use_colors.cmake  far_ccd_warnings.cmake
cmake/recipes/: catch2.cmake  sample-queries.cmake
notebooks/: ccd.ipynb
src/: CMakeLists.txt  autogen.cpp  autogen.hpp  ccd.cpp  ccd.hpp  config.hpp  config.hpp.in  cubic.cpp  cubic.hpp  geometry.cpp  geometry.hpp  math.cpp  math.hpp
tests/: CMakeLists.txt  test_dataset.cpp  test_edge_edge_ccd.cpp  test_point_triangle_ccd.cpp
